--- a/style.css
+++ b/style.css
@@ -128,6 +128,80 @@ h6 {
   font-family: 'Arimo', sans-serif;
 }
 
+.dl-title {
+  display: inline-block;
+  width: 52vw;
+  float: left;
+  text-align: right;
+}
+
+.date p {
+  text-align: right;
+  margin-left: 45px;
+  width: 53%;
+}
+
+.dl {
+  display: inline-block;
+  float: left;
+  position: relative;
+  top: -10px;
+  background: #E5A9D0;
+  border-radius: 50%;
+  text-align: center;
+  margin: 0;
+  margin-left: 10px;
+  padding: 0 5px;
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  vertical-align: middle;
+  color: #FFF;
+  font-size: 20px;
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+.dl:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -23px;
+  margin-top: -15px;
+  border: 15px solid transparent;
+  border-right: 15px solid #E5A9D0;
+  z-index: 0;
+}
+
+.dl a {
+  display: block;
+  padding: 0;
+  margin: 0;
+  height: 20px;
+  color: #fff;
+  font-family: 'Pacifico',
+    cursive;
+  font-size: 12px;
+  line-height: 50px;
+  font-weight: 100;
+}
+
+.dl a:hover,
+.dl a:visited {
+  color: ##E5A9D0;
+  font-weight: 800;
+  transform: rotate(90);
+  transition: 1s;
+}
+
+.calender {
+  position: relative;
+  top: -55px;
+  left: 60vw;
+  margin-left: 20px;
+}
+
+
 #about ul {
   float: left;
   position: relative;
@@ -208,66 +282,6 @@ td {
   position: relative;
 }
 
-.dl-title {
-  display: inline-block;
-  width: 52vw;
-  float: left;
-  text-align: right;
-}
-
-.dl {
-  display: inline-block;
-  float: left;
-  position: relative;
-  top: -10px;
-  background: #E5A9D0;
-  border-radius: 50%;
-  text-align: center;
-  margin: 0;
-  margin-left: 10px;
-  padding: 0 5px;
-  width: 70px;
-  height: 70px;
-  line-height: 70px;
-  vertical-align: middle;
-  color: #FFF;
-  font-size: 20px;
-  border-radius: 50%;
-  box-sizing: border-box;
-}
-
-.dl:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: -23px;
-  margin-top: -15px;
-  border: 15px solid transparent;
-  border-right: 15px solid #E5A9D0;
-  z-index: 0;
-}
-
-.dl a {
-  display: block;
-  padding: 0;
-  margin: 0;
-  height: 20px;
-  color: #fff;
-  font-family: 'Pacifico',
-    cursive;
-  font-size: 12px;
-  line-height: 50px;
-  font-weight: 100;
-}
-
-.dl a:hover,
-.dl a:visited {
-  color: ##E5A9D0;
-  font-weight: 800;
-  transform: rotate(90);
-  transition: 1s;
-}
-
 .map-img {
   display: block;
   width: 100vw;
@@ -286,6 +300,8 @@ td {
 .card {
   background: #F7F5BE;
   margin: 10px;
+  padding: 15px;
+  max-width: 350px;
 }
 
 .area .card {
@@ -294,6 +310,18 @@ td {
 
 .fastpass .card {
   background: #AED9E0;
+}
+
+.event .card {
+  background: #D6B8E0;
+}
+
+.event .card a:hover {
+  color: #fff;
+}
+
+.event .card img {
+  width: 200px;
 }
 
 details {
